<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_recycler_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_large">

            <TextView
                android:id="@+id/recycler_project_textview_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/recycler_project_guideline_horizontal"
                app:layout_constraintLeft_toLeftOf="parent"

                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="@dimen/text_heading_1"
                android:text="@string/placeholder_text_project_name"/>

            <TextView
                android:id="@+id/recycler_project_textview_created_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/recycler_project_guideline_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"

                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_small"

                android:text="@string/text_created"
                />

            <TextView
                android:id="@+id/recycler_project_textview_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/recycler_project_guideline_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/recycler_project_textview_created_description"

                android:layout_marginTop="@dimen/margin_medium"

                android:textStyle="italic"
                android:text="@string/placeholder_text_date"/>

            <TextView
                android:id="@+id/recycler_project_textview_modified_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/recycler_project_guideline_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/recycler_project_guideline_vertical"

                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_small"

                android:text="@string/text_modified"
                />

            <TextView
                android:id="@+id/recycler_project_textview_modified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/recycler_project_guideline_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/recycler_project_textview_modified_description"

                android:textStyle="italic"
                android:layout_marginTop="@dimen/margin_medium"

                android:text="@string/placeholder_text_date"/>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/recycler_project_guideline_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5"
                />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/recycler_project_guideline_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.35"/>

            <Button
                android:id="@+id/recycler_project_button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                android:drawableTop="@drawable/ic_baseline_delete_forever_24"
                android:textSize="@dimen/button_text_small"
                android:text="@string/text_delete"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>